# jsphinx

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.rst  Makefile  README.md  README.rst  package.json  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  conf.py.distrib  documentation.rst  examples.rst  index.rst  no_pragma.rst  no_pragma_demo.rst  requirements.in  requirements.txt  test_docs.py  test_theme.py
docs/_static/no_pragma_examples/: example_1.py
examples/no_pragma_examples/: example_1.py
src/css/: alabaster.css  bootstrap.css  furo.css  pydata_sphinx_theme.css  sphinx_book_theme.css  sphinx_immaterial.css  sphinx_material.css  sphinx_rtd_theme.css
src/js/: download_adapter.jquery.js  download_adapter.js
src/jsphinx/: __init__.py  cdn.py  no_pragma.py
src/jsphinx/tests/: test_no_pragma.py
