[project]
name = "prismjs-sphinx"
version = "1.0.3"

dependencies = [
    "sphinx",
]

[project.optional-dependencies]
all = ["prismjs-sphinx[themes,dev]"]
themes = [
    "sphinx_rtd_theme",
    "sphinx-bootstrap-theme",
    "sphinx-material",
    "furo",
]
dev = ["black", "isort", "ruff", "ipython"]

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

# Build system information below.
# NOTE: You don't need this in your own Black configuration.
[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
#known_first_party = "faker_file"
known_first_party = [
    "upload",
    "factories",
    "project",
    "faker_file_admin",
    "instance",
    "sqlalchemy_factories",
    "marytts_mp3_generator",
]
known_third_party = ["django", "factory", "faker_file"]
skip = ["wsgi.py", "builddocs/"]

[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "examples/django_example/project/wsgi.py",
    "docs",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
