[project]
name = "jsphinx"
version = "1.3.0"

dependencies = [
    "sphinx",
]

[project.optional-dependencies]
all = ["jsphinx[themes,dev,test]"]
themes = [
    "furo",
    "pydata-sphinx-theme",
    "sphinx-book-theme",
    "sphinx-bootstrap-theme",
    "sphinx-material",
    "sphinx_rtd_theme",
]
dev = [
    "black",
    "detect-secrets",
    "doc8",
    "ipython",
    "isort",
    "pip-tools",
    "ruff",
]
test = [
    "Pillow",
    "faker-file",
    "pytest",
    "python-docx",
    "selenium",
    "get-chromedriver-py",
]

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

# Build system information below.
# NOTE: You don't need this in your own Black configuration.
[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
known_first_party = []
known_third_party = []
skip = ["wsgi.py", "builddocs/"]

[tool.ruff]
line-length = 80

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.doc8]
ignore-path = [
    "docs/requirements.txt",
    "src/prismjs_sphinx.egg-info/SOURCES.txt",
]
